added an index and resume files

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,14 @@
-!= title_with_markup()
+//- h1 Francisco Gutierrez
+//- p Welcome to a list of my stuff
+//- ul
+//-   li Things
+//-   li other things
+//-   li
+//-     a(href='resume.html') le resume
 
 :markdown
-  **Whoo!** You got everything working. Now get to making cool things : )
-
-p this file can be found in views/index.jade
-
-include _partial
-
-:markdown
-  For help and documentation, check out [http://roots.cx](http://roots.cx)
-
-:coffeescript
-  console.log 'you can even use coffeescript in your views, aw yeah'
+  # Francisco Gutierrez
+  * [My Resume](resume.html)
+  * [Facebook](http://www.facebook.com/freefrancisco)
+  * [Twitter](http://www.twitter.com/freefrancisco)
+  * [LinkedIn](http://www.linkedin.com/in/francisco)
